change the value of disability in the staff summar

--- a/src/app/shared/components/staff-record-summary/personal-details/personal-details.component.html
+++ b/src/app/shared/components/staff-record-summary/personal-details/personal-details.component.html
@@ -101,7 +101,7 @@
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">Disabled</dt>
     <dd class="govuk-summary-list__value">
-      {{ worker.disability || '-' | closedEndedAnswer }}
+      {{ showDisability || '-' | closedEndedAnswer }}
     </dd>
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
       <app-summary-record-change
