fixed some text issues and the back link

--- a/src/app/features/workers/nationality/nationality.component.html
+++ b/src/app/features/workers/nationality/nationality.component.html
@@ -40,8 +40,7 @@
               id="conditional-nationalityKnown-conditional-2"
             >
               <div class="govuk-form-group">
-                <label class="govuk-label" for="nationalityName"> Nationality </label>
-                <span id="nationalityName-hint" class="govuk-hint"> Optional </span>
+                <label class="govuk-label" for="nationalityName"> Nationality (optional)</label>
                 <span
                   id="nationalityName-error"
                   class="govuk-error-message"
@@ -68,7 +67,7 @@
                 type="radio"
                 value="Don't know"
               />
-              <label class="govuk-label govuk-radios__label" for="nationalityKnown-3"> Don't know </label>
+              <label class="govuk-label govuk-radios__label" for="nationalityKnown-3"> I do not know </label>
             </div>
           </div>
         </div>
