fix the total starters text

--- a/src/app/features/workplace/starters/starters.component.html
+++ b/src/app/features/workplace/starters/starters.component.html
@@ -110,7 +110,7 @@
               </button>
             </div>
             <div class="govuk-grid-column-one-third govuk-!-margin-top-1">
-              <p class="govuk-heading-s">Total vacancies: {{ totalStarters }}</p>
+              <p class="govuk-heading-s">Total new starters: {{ totalStarters }}</p>
             </div>
           </div>
 
