change the text and order for the nursing  specialism

--- a/src/app/features/workers/nursing-specialism/nursing-specialism.component.html
+++ b/src/app/features/workers/nursing-specialism/nursing-specialism.component.html
@@ -53,17 +53,7 @@
                 </div>
               </div>
             </div>
-            <div class="govuk-radios__item">
-              <input
-                class="govuk-radios__input"
-                id="hasNurseSpecialism-dontKnow"
-                name="hasNurseSpecialism"
-                formControlName="hasNurseSpecialism"
-                type="radio"
-                value="Don't know"
-              />
-              <label for="hasNurseSpecialism-dontKnow" class="govuk-label govuk-radios__label"> Don't know </label>
-            </div>
+
             <div class="govuk-radios__item">
               <input
                 class="govuk-radios__input"
@@ -74,8 +64,19 @@
                 value="No"
               />
               <label for="hasNurseSpecialism-no" class="govuk-label govuk-radios__label">
-                This nurse is not using any of their specialisms in their current role
+                No, this nurse is not using any of their specialisms in their current role
               </label>
+            </div>
+            <div class="govuk-radios__item">
+              <input
+                class="govuk-radios__input"
+                id="hasNurseSpecialism-dontKnow"
+                name="hasNurseSpecialism"
+                formControlName="hasNurseSpecialism"
+                type="radio"
+                value="Don't know"
+              />
+              <label for="hasNurseSpecialism-dontKnow" class="govuk-label govuk-radios__label"> I do not know</label>
             </div>
           </div>
         </fieldset>
