--- a/src/app/features/workers/nursing-specialism/nursing-specialism.component.html
+++ b/src/app/features/workers/nursing-specialism/nursing-specialism.component.html
@@ -2,10 +2,11 @@
 
 <form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-three-quarters-from-desktop">
+    <div class="govuk-grid-column-two-thirds-from-desktop">
       <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
         <fieldset class="govuk-fieldset">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl govuk-!-margin-bottom-4">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-margin-bottom-4">
+            <span class="govuk-caption-l">Employment details</span>
             <h1 class="govuk-fieldset__heading">Is this nurse using any of their specialisms in their current role?</h1>
           </legend>
           <p>
@@ -80,6 +81,15 @@
             </div>
           </div>
         </fieldset>
+      </div>
+    </div>
+    <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
+      <div class="govuk-!-margin-left-8">
+        <app-progress-bar
+          data-testid="progress-bar"
+          [sections]="staffRecordSections"
+          [currentSection]="'Employment details'"
+        ></app-progress-bar>
       </div>
     </div>
   </div>
