Remove init() from question component

--- a/src/app/features/workers/nursing-specialism/nursing-specialism.component.html
+++ b/src/app/features/workers/nursing-specialism/nursing-specialism.component.html
@@ -65,7 +65,8 @@
                 value="No"
               />
               <label for="hasNurseSpecialism-no" class="govuk-label govuk-radios__label">
-                No, this nurse is not using any of their specialisms in their current role
+                No, this nurse is not using any of their specialisms in their <br />
+                current role
               </label>
             </div>
             <div class="govuk-radios__item">
