--- a/src/app/features/workers/ethnicity/ethnicity.component.html
+++ b/src/app/features/workers/ethnicity/ethnicity.component.html
@@ -3,59 +3,75 @@
 <form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
-      <div
-        class="govuk-form-group govuk-!-margin-bottom-4"
-        [class.govuk-form-group--error]="submitted && form.get('ethnicity').invalid"
-      >
-        <h1 class="govuk-label-wrapper">
-          <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
-          <label class="govuk-label govuk-label--l govuk-!-margin-bottom-8" for="ethnicity">
+      <fieldset class="govuk-fieldset">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <h1 class="govuk-fieldset__heading">
+            <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
             What's their ethnicity?
-          </label>
-        </h1>
-
-        <div class="govuk-radios govuk-radios--conditional">
-          <ng-container *ngFor="let groupName of ethnicityGroups(); let idx = index">
-            <div class="govuk-radios__item">
-              <input
-                class="govuk-radios__input"
-                [formControlName]="'ethnicityGroup'"
-                id="ethnicityGroup-{{ idx }}"
-                name="ethnicityGroup"
-                type="radio"
-                [value]="groupName"
-                aria-controls="conditional-ethnicity-conditional-1"
-              />
-              <label class="govuk-label govuk-radios__label" for="ethnicityGroup-{{ idx }}">
-                {{ groupName }}
-              </label>
-            </div>
-            <div
-              class="govuk-radios__conditional"
-              [class.govuk-radios__conditional--hidden]="form.get('ethnicityGroup').value !== groupName"
-              id="conditional-ethnicity-conditional-1"
-            >
-              <div>
-                <ng-container *ngFor="let ethnicityOption of ethnicities[groupName]; let idx = index">
-                  <div class="govuk-radios__item">
-                    <input
-                      type="radio"
-                      id="ethnicity-{{ idx }}"
-                      [value]="ethnicityOption.id"
-                      name="ethnicity"
-                      [formControlName]="'ethnicity'"
-                      class="govuk-radios__input"
-                    />
-                    <label class="govuk-label govuk-radios__label" for="">
-                      {{ ethnicityOption.ethnicity }}
-                    </label>
-                  </div>
-                </ng-container>
+          </h1>
+        </legend>
+        <div
+          class="govuk-form-group govuk-!-margin-bottom-4"
+          [class.govuk-form-group--error]="submitted && form.invalid"
+        >
+          <div class="govuk-radios govuk-radios--conditional">
+            <ng-container *ngFor="let groupName of ethnicityGroups(); let idx = index">
+              <div class="govuk-radios__item">
+                <input
+                  class="govuk-radios__input"
+                  [formControlName]="'ethnicityGroup'"
+                  id="ethnicityGroup-{{ idx }}"
+                  name="ethnicityGroup"
+                  type="radio"
+                  [value]="groupName"
+                  aria-controls="conditional-ethnicity-conditional-1"
+                  (change)="removeSelectedEthnicities()"
+                />
+                <label class="govuk-label govuk-radios__label" for="ethnicityGroup-{{ idx }}">
+                  {{ groupName }}
+                </label>
               </div>
-            </div>
-          </ng-container>
+              <div
+                class="govuk-radios__conditional"
+                [class.govuk-radios__conditional--hidden]="form.get('ethnicityGroup').value !== groupName"
+                id="conditional-ethnicity-conditional-1"
+              >
+                <div class="govuk-form-group" id="ethnicities-conditional">
+                  <label
+                    class="govuk-label govuk-label--s govuk-!-font-weight-bold govuk-!-margin-bottom-4"
+                    for="ethnicities-conditional"
+                    >Which of the following best describes their ethnic backgroud?</label
+                  >
+                  <span
+                    *ngIf="submitted && form.get('ethnicity').errors"
+                    id="ethnicity-error"
+                    class="govuk-error-message"
+                  >
+                    <span class="govuk-visually-hidden">Error:</span> {{ getFormErrorMessage('ethnicity', 'required') }}
+                  </span>
+
+                  <ng-container *ngFor="let ethnicityOption of ethnicitiesByGroup[groupName]; let idx = index">
+                    <div class="govuk-radios__item">
+                      <input
+                        class="govuk-radios__input"
+                        [class.govuk-input--error]="submitted && form.get('ethnicity').invalid"
+                        id="ethnicity-{{ idx }}"
+                        name="ethnicity"
+                        type="radio"
+                        [value]="ethnicityOption.id"
+                        [formControlName]="'ethnicity'"
+                      />
+                      <label class="govuk-label govuk-radios__label" for="">
+                        {{ ethnicityOption.ethnicity }}
+                      </label>
+                    </div>
+                  </ng-container>
+                </div>
+              </div>
+            </ng-container>
+          </div>
         </div>
-      </div>
+      </fieldset>
     </div>
     <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
       <div class="govuk-!-margin-left-8">
