push changes requested in desk check

--- a/src/app/features/workers/nursing-specialism/nursing-specialism.component.html
+++ b/src/app/features/workers/nursing-specialism/nursing-specialism.component.html
@@ -12,7 +12,7 @@
           <p>
             All registered nurses choose from one of four specialisms as part of their nursing degree (adult nursing,
             children's nursing, mental health nursing or learning disability nursing). They can specialise in other
-            areas like community care after they have qualified.
+            areas, like community care, after they have qualified.
           </p>
           <div class="govuk-radios govuk-radios--conditional">
             <div class="govuk-radios__item">
@@ -32,7 +32,7 @@
               id="conditional-nurseSpecialism"
             >
               <div class="govuk-form-group">
-                <span id="selectedNurseSpecialisms-hint" class="govuk-hint">Select all that apply.</span>
+                <p>Select all that apply.</p>
                 <div class="govuk-checkboxes">
                   <div
                     class="govuk-checkboxes__item"
