--- a/src/app/features/workers/recruited-from/recruited-from.component.html
+++ b/src/app/features/workers/recruited-from/recruited-from.component.html
@@ -3,7 +3,10 @@
 <form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
-      <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('recruitedFromId').invalid">
+      <div
+        class="govuk-form-group govuk-!-margin-bottom-4"
+        [class.govuk-form-group--error]="submitted && form.get('recruitedFromId').invalid"
+      >
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <span class="govuk-caption-l">Employment details</span>
@@ -78,5 +81,5 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button [return]="!insideFlow" (clicked)="onSubmit($event)"></app-submit-button>
 </form>
