feat(staffRecordsEthnicGroup): Fixed typo

--- a/src/app/features/workers/ethnicity/ethnicity.component.html
+++ b/src/app/features/workers/ethnicity/ethnicity.component.html
@@ -38,7 +38,7 @@
               >
                 <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
                   <label class="govuk-label govuk-label--s govuk-!-font-weight-bold govuk-!-margin-bottom-4"
-                    >Which of the following best describes their ethnic backgroud?</label
+                    >Which of the following best describes their ethnic background?</label
                   >
                   <span
                     *ngIf="submitted && form.get('ethnicity').errors"
