Change the position of header

--- a/src/app/features/workers/days-of-sickness/days-of-sickness.component.html
+++ b/src/app/features/workers/days-of-sickness/days-of-sickness.component.html
@@ -11,7 +11,7 @@
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <span class="govuk-caption-l">Employment details</span>
             <h1 class="govuk-fieldset__heading">
-              Do you know how many days sickness they've taken in the last 12 months?
+              Do you know how many days sickness they've taken in the last <br />12 months?
             </h1>
           </legend>
           <div class="govuk-radios govuk-radios--conditional">
