--- a/src/app/features/workers/contract-with-zero-hours/contract-with-zero-hours.component.html
+++ b/src/app/features/workers/contract-with-zero-hours/contract-with-zero-hours.component.html
@@ -8,10 +8,9 @@
         [class.govuk-form-group--error]="submitted && form.get('zeroHoursContract').invalid"
       >
         <fieldset class="govuk-fieldset">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-            <h1 class="govuk-fieldset__heading">
-              Do they have a zero hours contract?
-            </h1>
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+            <span class="govuk-caption-l">Employment details</span>
+            <h1 class="govuk-fieldset__heading">Do they have a zero hours contract?</h1>
           </legend>
           <div class="govuk-radios">
             <div *ngFor="let answer of answersAvailable; let idx = index" class="govuk-radios__item">
@@ -29,6 +28,16 @@
             </div>
           </div>
         </fieldset>
+      </div>
+    </div>
+
+    <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
+      <div class="govuk-!-margin-left-8">
+        <app-progress-bar
+          data-testid="progress-bar"
+          [sections]="staffRecordSections"
+          [currentSection]="'Employment details'"
+        ></app-progress-bar>
       </div>
     </div>
   </div>
