--- a/src/app/features/workers/contract-with-zero-hours/contract-with-zero-hours.component.html
+++ b/src/app/features/workers/contract-with-zero-hours/contract-with-zero-hours.component.html
@@ -20,10 +20,10 @@
                 id="zeroHoursContract{{ idx }}"
                 name="zeroHoursContract"
                 type="radio"
-                [value]="answer"
+                [value]="answer.value"
               />
               <label class="govuk-label govuk-radios__label" for="zeroHoursContract{{ idx }}">
-                {{ answer }}
+                {{ answer.tag }}
               </label>
             </div>
           </div>
@@ -42,5 +42,5 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button [return]="!insideFlow" (clicked)="onSubmit($event)"></app-submit-button>
 </form>
