--- a/src/app/features/workers/contract-with-zero-hours/contract-with-zero-hours.component.html
+++ b/src/app/features/workers/contract-with-zero-hours/contract-with-zero-hours.component.html
@@ -4,7 +4,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
       <div
-        class="govuk-form-group"
+        class="govuk-form-group govuk-!-margin-bottom-4"
         [class.govuk-form-group--error]="submitted && form.get('zeroHoursContract').invalid"
       >
         <fieldset class="govuk-fieldset">
