--- a/src/app/features/workers/main-job-start-date/main-job-start-date.component.html
+++ b/src/app/features/workers/main-job-start-date/main-job-start-date.component.html
@@ -5,9 +5,11 @@
     <div class="govuk-grid-column-two-thirds-from-desktop">
       <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && (form.invalid || serverError)">
         <fieldset class="govuk-fieldset" aria-describedby="mainJobStartDate-hint" role="group">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-            <h1 class="govuk-fieldset__heading">When did they start in their main job role?</h1>
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+            <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
+            <h1 class="govuk-fieldset__heading">When did they start in their main <br>job role?</h1>
           </legend>
+          <label class="govuk-label">Start date</label>
           <span id="mainJobStartDate-hint" class="govuk-hint"> For example, 31 3 1980 </span>
           <span
             *ngIf="submitted && form.get('mainJobStartDate').errors"
@@ -35,7 +37,16 @@
         </fieldset>
       </div>
     </div>
+    <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
+      <div class="govuk-!-margin-left-8">
+        <app-progress-bar
+          data-testid="progress-bar"
+          [sections]="staffRecordSections"
+          [currentSection]="section"
+        ></app-progress-bar>
+      </div>
+    </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button [return]="!insideFlow" (clicked)="onSubmit($event)"></app-submit-button>
 </form>
