--- a/src/app/features/workers/average-weekly-hours/average-weekly-hours.component.html
+++ b/src/app/features/workers/average-weekly-hours/average-weekly-hours.component.html
@@ -3,8 +3,11 @@
 <form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
-      <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('hours').invalid">
-        <fieldset class="govuk-fieldset govuk-!-margin-bottom-4">
+      <div
+        class="govuk-form-group govuk-!-margin-bottom-4"
+        [class.govuk-form-group--error]="submitted && form.get('hours').invalid"
+      >
+        <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <span class="govuk-caption-l">Employment details</span>
             <h1 class="govuk-fieldset__heading">Do you know how many hours they work on average each week?</h1>
