change the way the submit button works, add new click handler to all components that use it

--- a/src/app/features/workers/apprenticeship-training/apprenticeship-training.component.html
+++ b/src/app/features/workers/apprenticeship-training/apprenticeship-training.component.html
@@ -31,5 +31,5 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
