--- a/src/app/features/workers/gender/gender.component.html
+++ b/src/app/features/workers/gender/gender.component.html
@@ -40,5 +40,5 @@
       </div>
     </div>
   </div>
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
