--- a/src/app/features/workers/main-job-start-date/main-job-start-date.component.html
+++ b/src/app/features/workers/main-job-start-date/main-job-start-date.component.html
@@ -7,7 +7,7 @@
         <fieldset class="govuk-fieldset" aria-describedby="mainJobStartDate-hint" role="group">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
-            <h1 class="govuk-fieldset__heading">When did they start in their main <br>job role?</h1>
+            <h1 class="govuk-fieldset__heading">When did they start in their main <br />job role?</h1>
           </legend>
           <label class="govuk-label">Start date</label>
           <span id="mainJobStartDate-hint" class="govuk-hint"> For example, 31 3 1980 </span>
@@ -48,5 +48,5 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!insideFlow" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button [return]="!insideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
