--- a/src/app/features/workers/adult-social-care-started/adult-social-care-started.component.html
+++ b/src/app/features/workers/adult-social-care-started/adult-social-care-started.component.html
@@ -84,5 +84,5 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!insideFlow" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button [return]="!insideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
