--- a/src/app/features/workers/average-weekly-hours/average-weekly-hours.component.html
+++ b/src/app/features/workers/average-weekly-hours/average-weekly-hours.component.html
@@ -6,9 +6,7 @@
       <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('hours').invalid">
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-            <h1 class="govuk-fieldset__heading">
-              Do you know how many hours they work on average per week?
-            </h1>
+            <h1 class="govuk-fieldset__heading">Do you know how many hours they work on average per week?</h1>
           </legend>
           <div class="govuk-radios govuk-radios--conditional">
             <div class="govuk-radios__item">
@@ -21,9 +19,7 @@
                 value="Yes"
                 aria-controls="conditional-hoursKnown-conditional-1"
               />
-              <label class="govuk-label govuk-radios__label" for="hoursKnown-conditional-1">
-                Yes
-              </label>
+              <label class="govuk-label govuk-radios__label" for="hoursKnown-conditional-1"> Yes </label>
             </div>
             <div
               class="govuk-radios__conditional"
@@ -31,9 +27,7 @@
               id="conditional-hoursKnown-conditional-1"
             >
               <div class="govuk-form-group">
-                <label class="govuk-label" for="hours">
-                  Average weekly hours
-                </label>
+                <label class="govuk-label" for="hours"> Average weekly hours </label>
                 <span *ngIf="submitted && form.get('hours').errors" id="hours-error" class="govuk-error-message">
                   <ng-container *ngIf="form.get('hours').hasError('required')">
                     <span class="govuk-visually-hidden">Error:</span>
@@ -69,9 +63,7 @@
                 type="radio"
                 value="No"
               />
-              <label class="govuk-label govuk-radios__label" for="hoursKnown-2">
-                No
-              </label>
+              <label class="govuk-label govuk-radios__label" for="hoursKnown-2"> No </label>
             </div>
           </div>
         </fieldset>
@@ -79,5 +71,5 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
