--- a/src/app/features/workers/british-citizenship/british-citizenship.component.html
+++ b/src/app/features/workers/british-citizenship/british-citizenship.component.html
@@ -41,5 +41,5 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
