--- a/src/app/features/workers/care-certificate/care-certificate.component.html
+++ b/src/app/features/workers/care-certificate/care-certificate.component.html
@@ -6,9 +6,7 @@
       <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('careCertificate').invalid">
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-            <h1 class="govuk-fieldset__heading">
-              Have they started or completed the Care Certificate?
-            </h1>
+            <h1 class="govuk-fieldset__heading">Have they started or completed the Care Certificate?</h1>
           </legend>
           <div class="govuk-radios">
             <div *ngFor="let answer of answersAvailable; let idx = index" class="govuk-radios__item">
@@ -30,5 +28,5 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
