--- a/src/app/features/workers/disability/disability.component.html
+++ b/src/app/features/workers/disability/disability.component.html
@@ -38,5 +38,5 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
