--- a/src/app/features/workers/ethnicity/ethnicity.component.html
+++ b/src/app/features/workers/ethnicity/ethnicity.component.html
@@ -94,6 +94,6 @@
       </div>
     </div>
   </div>
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
 <!-- ethnicity-error -->
