--- a/src/app/features/workers/social-care-qualification/social-care-qualification.component.html
+++ b/src/app/features/workers/social-care-qualification/social-care-qualification.component.html
@@ -31,5 +31,5 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
