--- a/src/app/features/workers/staff-details/staff-details.component.html
+++ b/src/app/features/workers/staff-details/staff-details.component.html
@@ -1,10 +1,10 @@
 <app-error-summary *ngIf="submitted && form.invalid" [formErrorsMap]="formErrorsMap" [form]="form"></app-error-summary>
 
-<div class="govuk-grid-row">
-  <form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
+<form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
+  <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <span class="govuk-caption-l">Mandatory information</span>
           <h1 class="govuk-fieldset__heading">{{ worker ? 'Edit' : 'Add' }} a staff record</h1>
         </legend>
@@ -113,22 +113,23 @@
         </div>
       </fieldset>
     </div>
-  </form>
-  <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
-    <div class="govuk-!-margin-left-8">
-      <app-progress-bar
-        data-testid="progress-bar-1"
-        [sections]="staffRecordSections"
-        [currentSection]="'Mandatory information'"
-      ></app-progress-bar>
+
+    <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
+      <div class="govuk-!-margin-left-8">
+        <app-progress-bar
+          data-testid="progress-bar-1"
+          [sections]="staffRecordSections"
+          [currentSection]="'Mandatory information'"
+        ></app-progress-bar>
+      </div>
     </div>
   </div>
-</div>
-<app-submit-button
-  [return]="canReturn"
-  [canExit]="canExit"
-  [recordSummary]="false"
-  [callToAction]="submitTitle"
-  [isExistingStaffRecord]="!!worker"
-  (clicked)="onSubmit($event)"
-></app-submit-button>
+  <app-submit-button
+    [return]="!insideFlow"
+    [canExit]="canExit"
+    [recordSummary]="false"
+    [callToAction]="submitTitle"
+    [isExistingStaffRecord]="!!worker"
+    (clicked)="setSubmitAction($event)"
+  ></app-submit-button>
+</form>
