--- a/src/app/shared/components/submit-button/submit-button.component.html
+++ b/src/app/shared/components/submit-button/submit-button.component.html
@@ -2,36 +2,36 @@
   <ng-container *ngIf="!return; else summary">
     <div class="govuk-grid-column-two-thirds govuk__flex govuk-!-padding-left-0">
       <div>
-        <button type="submit" class="govuk-button govuk-!-margin-right-9" (click)="onClick($event, 'continue', true)">
+        <button type="submit" class="govuk-button govuk-!-margin-right-9" (click)="onButtonClick('continue', true)">
           {{ callToAction }}
         </button>
       </div>
 
       <div *ngIf="recordSummary" class="govuk-!-margin-left-9">
         <span class="govuk-visually-hidden">or</span>
-        <a class="govuk-button govuk-button--link" (click)="onClick($event, 'skip', false)">Skip this question</a>
+        <a class="govuk-button govuk-button--link" (click)="onLinkClick($event, 'skip', false)">Skip this question</a>
       </div>
       <div *ngIf="canExit" class="govuk-!-margin-left-9">
         <span class="govuk-visually-hidden">or</span>
-        <a class="govuk-button govuk-button--link" (click)="onClick($event, 'exit', false)">{{ exitText }}</a>
+        <a class="govuk-button govuk-button--link" (click)="onLinkClick($event, 'exit', false)">{{ exitText }}</a>
       </div>
     </div>
     <div class="govuk-grid-column-one-third">
       <div *ngIf="recordSummary" class="govuk-!-margin-left-7">
         <span class="govuk-visually-hidden">or</span>
-        <a class="govuk-button govuk-button--link" (click)="onClick($event, 'summary', false)"
+        <a class="govuk-button govuk-button--link" (click)="onLinkClick($event, 'summary', false)"
           >View this staff record</a
         >
       </div>
     </div>
   </ng-container>
   <ng-template #summary>
-    <button type="submit" class="govuk-button govuk-!-margin-right-9" (click)="onClick($event, 'return', true)">
+    <button type="submit" class="govuk-button govuk-!-margin-right-9" (click)="onButtonClick('return', true)">
       Save and return
     </button>
 
     <span class="govuk-visually-hidden">or</span>
-    <a class="govuk-button govuk-button--link govuk-!-margin-left-9" (click)="onClick($event, 'return', false)">{{
+    <a class="govuk-button govuk-button--link govuk-!-margin-left-9" (click)="onLinkClick($event, 'return', false)">{{
       exitText
     }}</a>
   </ng-template>
