--- a/src/app/features/workers/apprenticeship-training/apprenticeship-training.component.html
+++ b/src/app/features/workers/apprenticeship-training/apprenticeship-training.component.html
@@ -4,11 +4,12 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
       <div
-        class="govuk-form-group"
+        class="govuk-form-group govuk-!-margin-bottom-4"
         [class.govuk-form-group--error]="submitted && form.get('apprenticeshipTraining').invalid"
       >
         <fieldset class="govuk-fieldset">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+            <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
             <h1 class="govuk-fieldset__heading">Are they doing apprenticeship training?</h1>
           </legend>
           <div class="govuk-radios">
@@ -19,14 +20,23 @@
                 id="apprenticeshipTraining-{{ idx }}"
                 name="apprenticeshipTraining"
                 type="radio"
-                [value]="answer"
+                [value]="answer.value"
               />
               <label class="govuk-label govuk-radios__label" for="apprenticeshipTraining-{{ idx }}">
-                {{ answer }}
+                {{ answer.tag }}
               </label>
             </div>
           </div>
         </fieldset>
+      </div>
+    </div>
+    <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
+      <div class="govuk-!-margin-left-8">
+        <app-progress-bar
+          data-testid="progress-bar-1"
+          [sections]="staffRecordSections"
+          [currentSection]="section"
+        ></app-progress-bar>
       </div>
     </div>
   </div>
